--- a/src/app/crear/crear.component.html
+++ b/src/app/crear/crear.component.html
@@ -16,6 +16,18 @@
     <hr />
     <label>Plan</label>
     <input type="text"class="form-control" [(ngModel)]="lugar.plan"/>
+      <br />
+    <h3>Datos de dirección </h3>
+    <label>Calle y Número </label>
+    <input type="text"class="form-control" [(ngModel)]="lugar.calle"/>
+      <br />
+    <label>Ciudad </label>
+    <input type="text"class="form-control" [(ngModel)]="lugar.ciudad"/>
+      <br />
+    <label>País</label>
+    <input type="text"class="form-control" [(ngModel)]="lugar.pais  "/>
+
+
     <hr />
 
     <a class="btn btn-primary"style="color:white;" (click)="guardarLugar()">Enviar</a>
