code of animation Destacados added but not implemented.

--- a/src/app/lugares/lugares.component.html
+++ b/src/app/lugares/lugares.component.html
@@ -21,8 +21,15 @@
                 </ng-container>
             </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" [@contenedorAnimable]= "state">
             <h2>Destacados</h2>
+            <ng-container *ngFor="let lugar of lugares">
+
+                    <div class="bg-danger padding" *ngIf="lugar.plan  == 'pagado' ">
+                        <a routerLink="/crear/{{lugar.id}}"><h3>{{lugar.nombre}}</h3></a>
+                        <p [innerHtml]="lugar.descripcion | linkifystr"></p>
+                    </div>
+            </ng-container>
         </div>
     </div>
 </div>
