--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,14 +21,10 @@
         {{item.name}}
       </li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="nav-item"><a class="nav-link" routerLink="/login">
-        Login
-      </a>
+    <ul class="nav navbar-nav navbar-right "*ngIf="!loggedIn">
+      <li class="nav-item"><a class="nav-link" routerLink="/login"> Login </a>
       </li>
-      <li class="nav-item"><a class="nav-link" routerLink="/registro">
-        Registro
-      </a>
+      <li class="nav-item"><a class="nav-link" routerLink="/registro"> Registro </a>
       </li>
     </ul>
 
