--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,8 @@
 
     <!-- LOGOUT -->
     <ul class="nav navbar-nav navbar-right " *ngIf="loggedIn">
-      <li class="nav-item"><a class="nav-link" routerLink="/login" (click)="logout()"> Logout </a>  </li>
+      <li *ngIf="loggedUser"> <a  class="nav-link">{{loggedUser}}</a> </li>
+      <li class="nav-item"><a class="nav-link" (click)="logout()"> Logout </a>  </li>
 
     </ul>
     <!-- /  LOGOUT -->
