Type ahead implemented

--- a/src/app/crear/crear.component.html
+++ b/src/app/crear/crear.component.html
@@ -18,6 +18,14 @@
     <input type="text"class="form-control" [(ngModel)]="lugar.plan"/>
       <br />
     <h3>Datos de dirección </h3>
+
+    <div class="well">
+      <form>
+        <h3>Buscar direccion en google maps</h3>
+        <input [formControl]="searchField" class="form-control" />
+      </form>
+    </div>
+
     <label>Calle y Número </label>
     <input type="text"class="form-control" [(ngModel)]="lugar.calle"/>
       <br />
